--- a/htmlCode/login.html
+++ b/htmlCode/login.html
@@ -8,7 +8,7 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="registration.css">
+        <link rel="stylesheet" href="/cssCode/registration.css">
     </head>
     <body>
         <div class="container-fluid">
@@ -19,7 +19,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-9 col-lg-8 mx-auto">
-                                    <a href="home.html"><img src="bakery-logo.png" class="rounded mx-auto d-block pb-5" alt="Butternut Bakery Logo" width="300px"></a>
+                                    <a href="home.html"><img src="/images/bakery-logo.png" class="rounded mx-auto d-block pb-5" alt="Butternut Bakery Logo" width="300px"></a>
                                     <form>
                                         <div class="form-label-group">
                                             <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
