--- a/indexCode/index.html
+++ b/indexCode/index.html
@@ -91,7 +91,7 @@
                     </div>
                 </div>
                 <div class="text-center">
-                <a class="btn btn-primary btn-xl" href="../shoppingcart/index.php">Shop Now</a>
+                <a class="btn btn-primary btn-xl" href="/shoppingcart/index.php">Shop Now</a>
                 </div>
             </div>
         </section>
@@ -237,7 +237,7 @@
                                 <a style="color:#503629" href="#">Terms of Use</a>
                             </li>
                             <li class="list-inline-item">
-                                <a style="color:#503629" href="../loginCode/html/login.html">Admin Login</a>
+                                <a style="color:#503629" href="/loginCode/html/login.html">Admin Login</a>
                             </li>
                         </ul>
                     </div>
