--- a/loginCode/html/registration.html
+++ b/loginCode/html/registration.html
@@ -9,7 +9,7 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="css/registration.css">
+        <link rel="stylesheet" href="/loginCode/css/registration.css">
     </head>
     
     
@@ -22,7 +22,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-9 col-lg-8 mx-auto">
-                                    <a href="indexCode/index.html"><img src="img/bakery-logo.png" class="rounded mx-auto d-block pb-5" alt="Butternut Bakery Logo" width="400px"></a>
+                                    <a href="indexCode/index.html"><img src="/loginCode/img/bakery-logo.png" class="rounded mx-auto d-block pb-5" alt="Butternut Bakery Logo" width="400px"></a>
                                     <form>
                                         <div class="form-label-group">
                                             <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
